--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,129 +1,88 @@
-.container {
-  padding: 0 2rem;
-}
-
-.main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
+.App {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer {
-  display: flex;
   flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-}
-
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
+  height: 100vh;
+  width: 100vw;
+  background-image: linear-gradient(purple, black);
+  padding-left: 3rem;
+  padding-right: 3rem;
 }
 
 .logo {
-  height: 1em;
-  margin-left: 0.5rem;
+  color: white;
+  font-family: 'Ubuntu', sans-serif !important;
+  font-size: 4.2rem;
+  text-align: center;
+  display: flex;
 }
 
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
+.header {
+  display: flex;
+  flex-direction: row;
+  text-align: center;
 }
 
-@media (prefers-color-scheme: dark) {
-  .card,
-  .footer {
-    border-color: #222;
-  }
-  .code {
-    background: #111;
-  }
-  .logo img {
-    filter: invert(1);
-  }
+.menuItem {
+  color: white;
+  font-size: 1.4rem;
+  display: inline;
+  margin-right: 3rem;
+  cursor: pointer;
+}
+
+.menuItem:hover {
+  color: rgba(255, 255, 255, 0.688);
+  transition: 0.2s ease-out;
+}
+
+.menuBar {
+  display: flex;
+}
+
+.commitItem {
+  padding-bottom: 1.5rem;
+}
+
+.dateTime {
+  color: rgba(255, 255, 255, 0.748);
+  padding-left: 2rem;
+}
+
+.tile {
+  background-color: rgba(0, 0, 0, 0.671);
+  border-radius: 4rem;
+  border: 1px solid;
+  border-color: rgba(255, 255, 255, 0.269);
+  color: white;
+  width: 40vw;
+  padding: 2rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  margin-top: 10px;
+}
+
+.branchDetails {
+  padding-top: 5px;
+}
+
+.subLink {
+  display: inline-block;
+  margin-right: 1rem;
+  padding-top: 5px;
+  font-weight: 500;
+}
+
+.subLink:hover {
+  color: rgb(228, 141, 228);
+  cursor: pointer;
+}
+
+.tile:hover {
+  background-color: rgba(0, 0, 0, 0.45);
+  box-shadow: 5px 5px 5px rgb(89, 2, 89);
+  border-color: transparent;
+  border-width: 1px;
+  transition: 0.4s ease-in-out;
+  cursor: pointer;
 }
